--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@previewjs/loader": "^0.1.2",
+    "@reduxjs/toolkit": "^2.11.2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
@@ -12,6 +13,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-hot-toast": "^2.6.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.11.0",
     "react-router-dom": "^7.11.0",
     "react-scripts": "5.0.1",
